# template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.devcontainer/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.devcontainer/gpu-from-scratch/: dev-gpu.Dockerfile
.github/workflows/: docker.yml  pre-commit.yml  test.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/dependencies/: security.py  users.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 14a2b347e196_.py
backend/app/models/: users.py
backend/app/routers/: users.py
backend/requirements/: dev.in  dev.txt  prod.in  prod.txt
backend/tests/: test_main.py  test_users.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  utils.tsx
frontend/app/(auth)/: GoogleButton.tsx  layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/reset-password/: layout.tsx  page.tsx
frontend/app/(auth)/signup/: layout.tsx  page.tsx
frontend/app/account/: layout.tsx  page.tsx  providers.tsx
frontend/app/account/(friends)/: FriendRequests.tsx  FriendsTable.tsx  FriendsView.tsx
frontend/app/home/: Content.tsx  Spec.tsx  Support.tsx  page.tsx
frontend/app/lib/: api.tsx  callbacks.tsx
frontend/app/ui/: Button.tsx  Footer.tsx  Form.tsx  Header.tsx  Input.tsx  Main.tsx  Nav.tsx  ToolTip.tsx  Upload.tsx
(+3 files in other folders)
